--- a/01-前端开发基础/09-京东/index.html
+++ b/01-前端开发基础/09-京东/index.html
@@ -238,52 +238,76 @@
         <div class="other-nav">
           <ul>
             <li>
-              <i></i>
-              <p>话费</p>
+              <a href="#">
+                <i></i>
+                <p>话费</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>火车票</p>
+              <a href="#">
+                <i></i>
+                <p>火车票</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>加油卡</p>
+              <a href="#">
+                <i></i>
+                <p>加油卡</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>白条</p>
+              <a href="#">
+                <i></i>
+                <p>白条</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>电影票</p>
+              <a href="#">
+                <i></i>
+                <p>电影票</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>酒店</p>
+              <a href="#">
+                <i></i>
+                <p>酒店</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>理财</p>
+              <a href="#">
+                <i></i>
+                <p>理财</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>机票</p>
+              <a href="#">
+                <i></i>
+                <p>机票</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>礼品卡</p>
+              <a href="#">
+                <i></i>
+                <p>礼品卡</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>彩票</p>
+              <a href="#">
+                <i></i>
+                <p>彩票</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>游戏</p>
+              <a href="#">
+                <i></i>
+                <p>游戏</p>
+              </a>
             </li>
             <li>
-              <i></i>
-              <p>众筹</p>
+              <a href="#">
+                <i></i>
+                <p>众筹</p>
+              </a>
             </li>
           </ul>
         </div>
