--- a/01-前端开发基础/09-京东/index.html
+++ b/01-前端开发基础/09-京东/index.html
@@ -239,73 +239,73 @@
           <ul>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>话费</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>火车票</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>加油卡</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>白条</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>电影票</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>酒店</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>理财</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>机票</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>礼品卡</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>彩票</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>游戏</p>
               </a>
             </li>
             <li>
               <a href="#">
-                <i></i>
+                <div class="pic"></div>
                 <p>众筹</p>
               </a>
             </li>
