--- a/01-前端开发基础/09-京东/index.html
+++ b/01-前端开发基础/09-京东/index.html
@@ -317,12 +317,19 @@
   <!-- 秒杀区 -->
   <div class="sec-kill">
     <div class="container">
-      <img alt="秒杀" src="assets/sec-kill.png">
+      <img alt="秒杀" src="./assets/sec-kill.png">
       <img alt="秒杀1" src="./assets/banner1.png">
       <img alt="秒杀2" src="./assets/banner2.png">
       <img alt="秒杀3" src="./assets/banner3.png">
-      <img alt="秒杀4" src="assets/banner4.png">
+      <img alt="秒杀4" src="./assets/banner4.png">
     </div>
   </div>
+  <!-- 楼层 -->
+  <div class="floor">
+    <div class="container">
+
+    </div>
+  </div>
+
 </body>
 </html>
