--- a/01-前端开发基础/09-京东/index.html
+++ b/01-前端开发基础/09-京东/index.html
@@ -327,7 +327,23 @@
   <!-- 楼层 -->
   <div class="floor">
     <div class="container">
-      1
+      <!--  上部分 -->
+      <div class="floor-nav">
+        <div class="floor-name">家用电器</div>
+        <ul class="floor-nav-list">
+          <li><a href="#">热门</a></li>
+          <li><a href="#">大家电</a></li>
+          <li><a href="#">生活电器</a></li>
+          <li><a href="#">厨房电器</a></li>
+          <li><a href="#">应季电器</a></li>
+          <li><a href="#">空气/净水</a></li>
+          <li><a href="#">高端电器</a></li>
+        </ul>
+      </div>
+      <!-- 下部分 -->
+      <div class="floor-info">
+        
+      </div>
     </div>
   </div>
 
