--- a/01-前端开发基础/案例/京东首页/index.html
+++ b/01-前端开发基础/案例/京东首页/index.html
@@ -5,8 +5,8 @@
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>京东商城</title>
-  <link href="./css/reset.css" rel="stylesheet">
-  <link href="./css/index.css" rel="stylesheet">
+  <link href="css/reset.css" rel="stylesheet">
+  <link href="css/index.css" rel="stylesheet">
 </head>
 <body>
   <!-- 顶部导航条 -->
@@ -58,7 +58,7 @@
     <div class="container">
       <!-- logo -->
       <div class="logo">
-        <img alt="" src="./assets/logo.png">
+        <img alt="" src="assets/logo.png">
       </div>
       <!-- 搜索框 -->
       <div class="search">
@@ -216,7 +216,7 @@
       </div>
       <!-- banner -->
       <div class="banner">
-        <img alt="" src="./assets/banner主图.png">
+        <img alt="" src="assets/banner主图.png">
       </div>
       <div class="side-other">
         <!-- 尚品快报 -->
@@ -317,11 +317,11 @@
   <!-- 秒杀区 -->
   <div class="sec-kill">
     <div class="container">
-      <img alt="秒杀" src="./assets/sec-kill.png">
-      <img alt="秒杀1" src="./assets/banner1.png">
-      <img alt="秒杀2" src="./assets/banner2.png">
-      <img alt="秒杀3" src="./assets/banner3.png">
-      <img alt="秒杀4" src="./assets/banner4.png">
+      <img alt="秒杀" src="assets/sec-kill.png">
+      <img alt="秒杀1" src="assets/banner1.png">
+      <img alt="秒杀2" src="assets/banner2.png">
+      <img alt="秒杀3" src="assets/banner3.png">
+      <img alt="秒杀4" src="assets/banner4.png">
     </div>
   </div>
   <!-- 楼层 -->
@@ -351,21 +351,21 @@
             <li><a href="#">滚筒洗衣机</a></li>
             <li><a href="#">电热水器</a></li>
           </ul>
-          <img alt="广告图" src="./assets/编组.png">
+          <img alt="广告图" src="assets/编组.png">
         </div>
         <div class="item item2">
-          <img alt="" src="./assets/appliance_banner07.png">
+          <img alt="" src="assets/appliance_banner07.png">
         </div>
         <div class="item item3">
-          <img alt="" src="./assets/微波炉.png">
-          <img alt="" src="./assets/空气炸锅.png">
+          <img alt="" src="assets/微波炉.png">
+          <img alt="" src="assets/空气炸锅.png">
         </div>
         <div class="item item4">
-          <img alt="" src="./assets/冰箱.png">
+          <img alt="" src="assets/冰箱.png">
         </div>
         <div class="item item5">
-          <img alt="" src="./assets/电饭煲.png">
-          <img alt="" src="./assets/电饭煲2.png">
+          <img alt="" src="assets/电饭煲.png">
+          <img alt="" src="assets/电饭煲2.png">
         </div>
       </div>
     </div>
@@ -397,21 +397,21 @@
             <li><a href="#">滚筒洗衣机</a></li>
             <li><a href="#">电热水器</a></li>
           </ul>
-          <img alt="广告图" src="./assets/编组.png">
+          <img alt="广告图" src="assets/编组.png">
         </div>
         <div class="item item2">
-          <img alt="" src="./assets/appliance_banner07.png">
+          <img alt="" src="assets/appliance_banner07.png">
         </div>
         <div class="item item3">
-          <img alt="" src="./assets/微波炉.png">
-          <img alt="" src="./assets/空气炸锅.png">
+          <img alt="" src="assets/微波炉.png">
+          <img alt="" src="assets/空气炸锅.png">
         </div>
         <div class="item item4">
-          <img alt="" src="./assets/冰箱.png">
+          <img alt="" src="assets/冰箱.png">
         </div>
         <div class="item item5">
-          <img alt="" src="./assets/电饭煲.png">
-          <img alt="" src="./assets/电饭煲2.png">
+          <img alt="" src="assets/电饭煲.png">
+          <img alt="" src="assets/电饭煲2.png">
         </div>
       </div>
     </div>
