--- a/01-前端开发基础/09-CSS3/08_Flex布局_侧轴对齐方式_一行.html
+++ b/01-前端开发基础/09-CSS3/08_Flex布局_侧轴对齐方式_一行.html
@@ -29,7 +29,7 @@
       justify-content: flex-start;
 
       /* 侧轴对齐方式，侧轴的起始位置对齐 */
-      /*align-items: flex-start;*/
+      align-items: flex-start;
 
       /* 侧轴对齐方式，侧轴的结束位置对齐 */
       /*align-items: flex-end;*/
@@ -41,24 +41,24 @@
       /*align-items: baseline;*/
 
       /* 侧轴对齐方式，默认值，拉伸到整个父容器（前提：伸缩项目不能给高度） */
-      align-items: stretch;
+      /*align-items: stretch;*/
 
     }
 
     .inner {
       width: 200px;
-      /*height: 200px;*/
+      height: 200px;
       background-color: skyblue;
       border: 1px solid black;
     }
 
     .inner2 {
       font-size: 80px;
-      /*height: 300px;*/
+      height: 300px;
     }
 
     .inner3 {
-      /*height: 100px;*/
+      height: 100px;
     }
   </style>
 </head>
