--- a/01-前端开发基础/09-CSS3/09_Flex布局_侧轴对齐方式_多行.html
+++ b/01-前端开发基础/09-CSS3/09_Flex布局_侧轴对齐方式_多行.html
@@ -14,7 +14,7 @@
 
     .outer {
       width: 1000px;
-      height: 600px;
+      height: 900px;
       background-color: gray;
       margin: 50px auto 0;
       /* 开启 Flex 布局 */
@@ -29,6 +29,16 @@
        */
       justify-content: space-between;
 
+      /*
+        侧轴对齐方式（对行）：侧轴的起始位置对齐
+      */
+      /*align-content: flex-start;*/
+
+      /*
+        侧轴对齐方式（对行）：侧轴的结束位置对齐
+      */
+      align-content: flex-end;
+
     }
 
     .inner {
@@ -37,13 +47,29 @@
       background-color: skyblue;
       border: 1px solid black;
     }
+
+    .inner2 {
+      height: 300px;
+    }
+
+    .inner3 {
+      height: 100px;
+    }
   </style>
 </head>
 <body>
   <div class="outer">
     <div class="inner">1</div>
-    <div class="inner">2</div>
-    <div class="inner">3</div>
+    <div class="inner inner2">2</div>
+    <div class="inner inner3">3</div>
+    <div class="inner">4</div>
+    <div class="inner">5</div>
+    <div class="inner">6</div>
+    <div class="inner">7</div>
+    <div class="inner">8</div>
+    <div class="inner">9</div>
+    <div class="inner">10</div>
+    <div class="inner">11</div>
   </div>
 </body>
 </html>
