--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -16,6 +16,7 @@
       <h1 class="logo">
         <a href="#">网易云音乐</a>
       </h1>
+      <!-- top-links -->
       <ul class="top-links">
         <li><a href="#">发现音乐</a></li>
         <li><a href="#">我的音乐</a></li>
