--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -18,13 +18,13 @@
       </h1>
       <!-- top-links -->
       <ul class="top-links">
-        <li><a href="#">发现音乐</a></li>
-        <li><a href="#">我的音乐</a></li>
-        <li><a href="#">关注</a></li>
-        <li><a href="#">商城</a></li>
-        <li><a href="#">音乐人</a></li>
-        <li><a href="#">云推歌</a></li>
-        <li><a href="#">下载客户端</a></li>
+        <li><a class="item active" href="#">发现音乐</a></li>
+        <li><a class="item" href="#">我的音乐</a></li>
+        <li><a class="item" href="#">关注</a></li>
+        <li><a class="item" href="#">商城</a></li>
+        <li><a class="item" href="#">音乐人</a></li>
+        <li><a class="item" href="#">云推歌</a></li>
+        <li><a class="item" href="#">下载客户端</a></li>
       </ul>
       <!-- 导航 -->
       <div class="top-bar-nav">
