--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -24,7 +24,7 @@
         <li><a class="item" href="#">商城</a></li>
         <li><a class="item" href="#">音乐人</a></li>
         <li><a class="item" href="#">云推歌</a></li>
-        <li><a class="item" href="#">下载客户端</a></li>
+        <li><a class="item hot" href="#">下载客户端</a></li>
       </ul>
       <!-- 导航 -->
       <div class="top-bar-nav">
