--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -41,5 +41,18 @@
       </div>
     </div>
   </div>
+  <!-- nav -->
+  <div class="nav">
+    <div class="container">
+      <ul>
+        <li><a class="item active" href="#">推荐</a></li>
+        <li><a class="item" href="#">排行榜</a></li>
+        <li><a class="item" href="#">歌单</a></li>
+        <li><a class="item" href="#">主播电台</a></li>
+        <li><a class="item" href="#">歌手</a></li>
+        <li><a class="item" href="#">新碟上架</a></li>
+      </ul>
+    </div>
+  </div>
 </body>
 </html>
