--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <!-- nav -->
-  <div class="nav">
+  <div class="top-nav">
     <div class="container">
       <ul>
         <li><a class="item active" href="#">推荐</a></li>
