--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -54,5 +54,29 @@
       </ul>
     </div>
   </div>
+  <!-- banner -->
+  <div class="banner">
+    <div class="sub-container">
+      <div class="left">
+        <img alt="" src="./assets/banner1.png">
+        <img alt="" src="./assets/banner2.png">
+        <img alt="" src="./assets/banner3.png">
+        <img alt="" src="./assets/banner4.png">
+        <img alt="" src="./assets/banner5.png">
+        <img alt="" src="./assets/banner6.png">
+        <img alt="" src="./assets/banner7.png">
+        <ul class="dotted">
+          <li><a class="item active" href="#"></a></li>
+          <li><a class="item" href="#"></a></li>
+          <li><a class="item" href="#"></a></li>
+          <li><a class="item" href="#"></a></li>
+          <li><a class="item" href="#"></a></li>
+          <li><a class="item" href="#"></a></li>
+          <li><a class="item" href="#"></a></li>
+        </ul>
+      </div>
+      <div class="right"></div>
+    </div>
+  </div>
 </body>
 </html>
