--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -57,14 +57,30 @@
   <!-- banner -->
   <div class="banner">
     <div class="sub-container">
-      <div class="left">
-        <img alt="" src="./assets/banner1.png">
-        <img alt="" src="./assets/banner2.png">
-        <img alt="" src="./assets/banner3.png">
-        <img alt="" src="./assets/banner4.png">
-        <img alt="" src="./assets/banner5.png">
-        <img alt="" src="./assets/banner6.png">
-        <img alt="" src="./assets/banner7.png">
+      <div class="banner-img">
+        <ul>
+          <li>
+            <a href="#"><img alt="" src="./assets/banner1.png"></a>
+          </li>
+          <li>
+            <a href="#"><img alt="" src="./assets/banner2.png"></a>
+          </li>
+          <li>
+            <a href="#"><img alt="" src="./assets/banner3.png"></a>
+          </li>
+          <li>
+            <a href="#"><img alt="" src="./assets/banner4.png"></a>
+          </li>
+          <li>
+            <a href="#"><img alt="" src="./assets/banner5.png"></a>
+          </li>
+          <li>
+            <a href="#"><img alt="" src="./assets/banner6.png"></a>
+          </li>
+          <li>
+            <a href="#"><img alt="" src="./assets/banner7.png"></a>
+          </li>
+        </ul>
         <ul class="dotted">
           <li><a class="item active" href="#"></a></li>
           <li><a class="item" href="#"></a></li>
@@ -75,7 +91,11 @@
           <li><a class="item" href="#"></a></li>
         </ul>
       </div>
-      <div class="right"></div>
+      <div class="banner-nav">
+        <a href="#">
+          网易云音乐
+        </a>
+      </div>
     </div>
   </div>
 </body>
