--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -58,7 +58,7 @@
   <div class="banner">
     <div class="sub-container">
       <div class="banner-img">
-        <ul>
+        <ul class="banner-img-list">
           <li>
             <a href="#"><img alt="" src="./assets/banner1.png"></a>
           </li>
