--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -92,9 +92,8 @@
         </ul>
       </div>
       <div class="banner-nav">
-        <a href="#">
-          网易云音乐
-        </a>
+        <a class="download" href="#">下载客户端</a>
+        <div class="desc">PC 安卓 iPhone WP iPad Mac 六大客户端</div>
       </div>
     </div>
   </div>
