--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -95,7 +95,13 @@
         <a class="download" href="#">下载客户端</a>
         <div class="desc">PC 安卓 iPhone WP iPad Mac 六大客户端</div>
       </div>
+      <a class="arrow arrow-left" href="#"></a>
+      <a class="arrow arrow-right" href="#"></a>
     </div>
+  </div>
+  <!-- 楼层 -->
+  <div class="floor">
+
   </div>
 </body>
 </html>
