--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -101,7 +101,181 @@
   </div>
   <!-- 楼层 -->
   <div class="floor">
-
+    <div class="sub-container">
+      <div class="floor-left">
+        <!-- 热门推荐 -->
+        <div class="hot">
+          <div class="hot-nav">
+            <div class="hot-nav-left">
+              <h3 class="hot-nav-title">热门推荐</h3>
+              <ul class="hot-nav-links">
+                <li><a href="#">华语</a></li>
+                <li><a href="#">流行</a></li>
+                <li><a href="#">摇滚</a></li>
+                <li><a href="#">民谣</a></li>
+                <li><a href="#">电子</a></li>
+              </ul>
+            </div>
+            <a class="more" href="#">更多</a>
+          </div>
+          <div class="hot-content">
+            <ul class="hot-music">
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- 热门推荐 -->
+        <div class="hot">
+          <div class="hot-nav">
+            <div class="hot-nav-left">
+              <h3 class="hot-nav-title">热门推荐</h3>
+              <ul class="hot-nav-links">
+                <li><a href="#">华语</a></li>
+                <li><a href="#">流行</a></li>
+                <li><a href="#">摇滚</a></li>
+                <li><a href="#">民谣</a></li>
+                <li><a href="#">电子</a></li>
+              </ul>
+            </div>
+            <a class="more" href="#">更多</a>
+          </div>
+          <div class="hot-content">
+            <ul class="hot-music">
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <div class="cover">
+                    <img alt="" src="./assets/music-img.png">
+                  </div>
+                  <p class="desc">你曾经有多认真的喜欢一个人</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="floor-right">
+        
+      </div>
+    </div>
   </div>
 </body>
 </html>
