--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -273,7 +273,11 @@
         </div>
       </div>
       <div class="floor-right">
-        
+        <!-- 登录 -->
+        <div class="user-login">
+          <p>登录网易云音乐，可以享受无限收藏的乐趣，并且无限同步到手机</p>
+          <a class="login-btn" href="#">用户登录</a>
+        </div>
       </div>
     </div>
   </div>
