--- a/01-前端开发基础/案例练习/02_网易云音乐/index.html
+++ b/01-前端开发基础/案例练习/02_网易云音乐/index.html
@@ -278,8 +278,156 @@
           <p>登录网易云音乐，可以享受无限收藏的乐趣，并且无限同步到手机</p>
           <a class="login-btn" href="#">用户登录</a>
         </div>
+        <div class="other">
+          <!-- 入驻歌手 -->
+          <div class="signer">
+            <div class="header">入驻歌手</div>
+            <a class="more" href="#">更多 &gt;</a>
+          </div>
+          <!-- 内容 -->
+          <ul class="content">
+            <li>
+              <a href="#">
+                <img alt="" src="./assets/singer.png">
+                <div class="desc">
+                  <p class="singer-name">张惠妹</p>
+                  <p>台湾歌手张惠妹</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img alt="" src="./assets/singer.png">
+                <div class="desc">
+                  <p class="singer-name">张惠妹</p>
+                  <p>台湾歌手张惠妹</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img alt="" src="./assets/singer.png">
+                <div class="desc">
+                  <p class="singer-name">张惠妹</p>
+                  <p>台湾歌手张惠妹</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img alt="" src="./assets/singer.png">
+                <div class="desc">
+                  <p class="singer-name">张惠妹</p>
+                  <p>台湾歌手张惠妹</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img alt="" src="./assets/singer.png">
+                <div class="desc">
+                  <p class="singer-name">张惠妹</p>
+                  <p>台湾歌手张惠妹</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+          <!-- 申请 -->
+          <a class="apply" href="#">申请成为网易音乐人</a>
+        </div>
+        <div class="other">
+          <!-- 入驻歌手 -->
+          <div class="signer">
+            <div class="header">入驻歌手</div>
+            <a class="more" href="#">更多 &gt;</a>
+          </div>
+          <!-- 内容 -->
+          <ul class="content">
+            <li>
+              <a href="#">
+                <img alt="" src="./assets/singer.png">
+                <div class="desc">
+                  <p class="singer-name">张惠妹</p>
+                  <p>台湾歌手张惠妹</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img alt="" src="./assets/singer.png">
+                <div class="desc">
+                  <p class="singer-name">张惠妹</p>
+                  <p>台湾歌手张惠妹</p>
+                </div>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <img alt="" src="./assets/singer.png">
+                <div class="desc">
+                  <p class="singer-name">张惠妹</p>
+                  <p>台湾歌手张惠妹</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+          <!-- 申请 -->
+          <a class="apply" href="#">申请成为网易音乐人</a>
+        </div>
       </div>
     </div>
   </div>
+  <!-- footer -->
+  <div class="footer">
+    <div class="sub-container">
+      <ul class="tips">
+        <li>
+          <a href="#"></a>
+          <p>音乐开放平台</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>音乐开放平台</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>音乐开放平台</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>音乐开放平台</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>音乐开放平台</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>音乐开放平台</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>音乐开放平台</p>
+        </li>
+        <li>
+          <a href="#"></a>
+          <p>音乐开放平台</p>
+        </li>
+      </ul>
+      <div class="links">
+        服务条款| 隐私政策| 儿童隐私政策| 版权投诉| 投资者关系| 广告合作 | 联系我们
+      </div>
+      <div class="report">
+        廉正举报 不良信息举报邮箱: 51jubao@service.netease.com 客服热线：95163298
+      </div>
+      <p>
+        互联网宗教信息服务许可证：浙（2022）0000120 增值电信业务经营许可证：浙B2-20150198 粤B2-20090191-18 工业和信息化部备案管理系统网站
+      </p>
+      <p>
+        网易公司版权所有©1997-2023杭州乐读科技有限公司运营：浙网文[2021] 1186-054号 浙公网安备 33010902002564号
+      </p>
+    </div>
+  </div>
+
 </body>
 </html>
