--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Title</title>
+  <title>王者荣耀</title>
   <link href="./css/reset.css" rel="stylesheet">
   <link href="./css/index.css" rel="stylesheet">
 </head>
 <body>
-  
+  <!-- top-bar -->
+  <div class="top-bar">
+    <div class="top-bar-container">
+      <div class="left">
+        <h2 class="logo">
+          <a href="#">腾讯游戏</a>
+        </h2>
+        <div class="recommend">
+          <img alt="" src="./assets/recommend_activity.png">
+        </div>
+      </div>
+      <ul class="right">
+        <li class="item"><a class="grow" href="#">成长守护平台</a></li>
+        <li class="item"><a class="ranking" href="#">腾讯游戏排行榜</a></li>
+      </ul>
+    </div>
+  </div>
+  <!-- main -->
+  <div class="main"></div>
 </body>
 </html>
