--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -21,8 +21,12 @@
         </div>
       </div>
       <ul class="right">
-        <li class="item"><a class="grow" href="#">成长守护平台</a></li>
-        <li class="item"><a class="ranking" href="#">腾讯游戏排行榜</a></li>
+        <li class="item">
+          <a class="grow" href="#">成长守护平台</a>
+        </li>
+        <li class="item">
+          <a class="ranking" href="#">腾讯游戏排行榜</a>
+        </li>
       </ul>
     </div>
   </div>
