--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -30,6 +30,63 @@
       </ul>
     </div>
   </div>
+  <!-- top-nav -->
+  <div class="top-nav">
+    <div class="top-nav-container">
+      <div class="left">
+        <h1 class="logo">
+          <a href="#">王者荣耀</a>
+        </h1>
+        <ul class="top-nav-links">
+          <li class="item">
+            <a href="#">
+              游戏资料
+              <em class="desc">DATA</em>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              内容中心
+              <em class="desc">CONTENTS</em>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              赛事中心
+              <em class="desc">MATCH</em>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              百态王者
+              <em class="desc">CULTURE</em>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              社区互动
+              <em class="desc">COMMUNITY</em>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              玩家支持
+              <em class="desc">PLAYER</em>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              IP新游
+              <em class="desc">NEW GAMES</em>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="right">
+        2
+      </div>
+    </div>
+  </div>
   <!-- main -->
   <div class="main"></div>
 </body>
