--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -68,6 +68,18 @@
               <em class="desc">COMMUNITY</em>
             </a>
           </li>
+          <li class="item">
+            <a href="#">
+              玩家支持
+              <em class="desc">PLAYER</em>
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              IP新游
+              <em class="desc">NEW GAMES</em>
+            </a>
+          </li>
         </ul>
       </div>
       <div class="right">
