--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -96,6 +96,20 @@
     </div>
   </div>
   <!-- main -->
-  <div class="main"></div>
+  <div class="main">
+    <!-- 新闻 -->
+    <div class="main-news">
+      <div class="container">
+        <div class="banner">1</div>
+        <div class="news">2</div>
+        <div class="other">
+          <a class="download_btn" href="#">下载游戏</a>
+          <a class="env_btn" href="#">对局环境</a>
+          <a class="experience_btn" href="#">体验专区</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
 </body>
 </html>
