--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -100,8 +100,45 @@
     <!-- 新闻 -->
     <div class="main-news">
       <div class="container">
-        <div class="banner">1</div>
-        <div class="news">2</div>
+        <div class="banner">
+          <ul class="banner-img-list">
+            <li class="item">
+              <a href="#"><img alt="" src="./assets/banner1.png"></a>
+            </li>
+            <li class="item">
+              <a href="#"><img alt="" src="./assets/banner2.png"></a>
+            </li>
+            <li class="item">
+              <a href="#"><img alt="" src="./assets/banner3.png"></a>
+            </li>
+            <li class="item">
+              <a href="#"><img alt="" src="./assets/banner4.png"></a>
+            </li>
+            <li class="item">
+              <a href="#"><img alt="" src="./assets/banner5.png"></a>
+            </li>
+          </ul>
+          <ul class="dotted">
+            <li class="item"><a href="#">开启璀璨新程</a></li>
+            <li class="item"><a href="#">亚运电竞特许商品</a></li>
+            <li class="item"><a href="#">K甲夏季赛赛程</a></li>
+            <li class="item"><a href="#">TT语音合作外卡</a></li>
+            <li class="item"><a href="#">王者萌萌假日</a></li>
+          </ul>
+        </div>
+        <div class="news">
+          <ul class="news-classify">
+            <li>热门</li>
+            <li>新闻</li>
+            <li>公告</li>
+            <li>活动</li>
+            <li>赛事</li>
+          </ul>
+          <h3 class="notice">公告</h3>
+          <div class="content">
+            新闻内容
+          </div>
+        </div>
         <div class="other">
           <a class="download_btn" href="#">下载游戏</a>
           <a class="env_btn" href="#">对局环境</a>
