--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -128,11 +128,12 @@
         </div>
         <div class="news">
           <ul class="news-classify">
-            <li>热门</li>
-            <li>新闻</li>
-            <li>公告</li>
-            <li>活动</li>
-            <li>赛事</li>
+            <li class="item active"><a href="#">热门</a></li>
+            <li class="item"><a href="#">新闻</a></li>
+            <li class="item"><a href="#">公告</a></li>
+            <li class="item"><a href="#">活动</a></li>
+            <li class="item"><a href="#">赛事</a></li>
+            <li class="item">...</li>
           </ul>
           <h3 class="notice">公告</h3>
           <div class="content">
