--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -133,7 +133,7 @@
             <li class="item"><a href="#">公告</a></li>
             <li class="item"><a href="#">活动</a></li>
             <li class="item"><a href="#">赛事</a></li>
-            <li class="item">...</li>
+            <li class="item more"><a href="#">...</a></li>
           </ul>
           <h3 class="notice">公告</h3>
           <div class="content">
