--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -135,7 +135,9 @@
             <li class="item"><a href="#">赛事</a></li>
             <li class="item more"><a href="#">...</a></li>
           </ul>
-          <h3 class="notice">公告</h3>
+          <h3 class="notice">
+            <a href="#">蒙犽源·梦皮肤海报投票活动开启公告</a>
+          </h3>
           <div class="content">
             新闻内容
           </div>
