--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -136,7 +136,7 @@
             <li class="item more"><a href="#">...</a></li>
           </ul>
           <h3 class="notice">
-            <a href="#">蒙犽源·梦皮肤海报投票活动开启公告</a>
+            <a href="#">蒙犽源·梦皮肤海报投票活动开启公告蒙犽源·梦皮肤海报投票活动开启公告</a>
           </h3>
           <div class="content">
             新闻内容
