--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -4,11 +4,35 @@
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Title</title>
+  <title>考拉海购-首页</title>
+  <link href="./assets/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="./css/reset.css" rel="stylesheet">
   <link href="./css/index.css" rel="stylesheet">
 </head>
 <body>
-  
+  <!-- tab-bar -->
+  <ul class="tab-bar">
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./assets/tab-bar_home_active.png">
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./assets/tab-bar_category.png">
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./assets/tab-bar_cart.png">
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./assets/tab-bar_profile.png">
+      </a>
+    </li>
+  </ul>
+
 </body>
 </html>
