--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -34,5 +34,13 @@
     </li>
   </ul>
 
+  <!-- download -->
+  <div class="download">
+    <div class="left">1</div>
+    <div class="right">
+      <a href="#">打开APP</a>
+    </div>
+  </div>
+
 </body>
 </html>
