--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -36,7 +36,19 @@
 
   <!-- download -->
   <div class="download">
-    <div class="left">1</div>
+    <div class="left">
+      <h2 class="logo">
+        <img alt="" src="./assets/logo.png">
+      </h2>
+      <div class="info">
+        <div class="title">
+          【考拉海购】官方自营 正品保障【考拉海购】官方自营 嘻嘻哈哈呵呵哼哼~
+        </div>
+        <div class="desc">
+          下载 APP 新人可享125元购物礼包
+        </div>
+      </div>
+    </div>
     <div class="right">
       <a href="#">打开APP</a>
     </div>
