--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -54,5 +54,17 @@
     </div>
   </div>
 
+  <!-- top-bar -->
+  <div class="top-bar">
+    <div class="search">
+      <label>
+        <input placeholder="在千万海外商品中搜索" type="text">
+      </label>
+    </div>
+    <div class="btn">
+      <a href="#">登录/注册</a>
+    </div>
+  </div>
+
 </body>
 </html>
