--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -66,5 +66,24 @@
     </div>
   </div>
 
+  <!-- banner -->
+  <ul class="banner">
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./assets/banner1.png">
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./assets/banner1.png">
+      </a>
+    </li>
+    <li class="item">
+      <a href="#">
+        <img alt="" src="./assets/banner1.png">
+      </a>
+    </li>
+  </ul>
+
 </body>
 </html>
