--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -33,7 +33,6 @@
       </a>
     </li>
   </ul>
-
   <!-- download -->
   <div class="download">
     <div class="left">
@@ -53,7 +52,6 @@
       <a href="#">打开APP</a>
     </div>
   </div>
-
   <!-- top-bar -->
   <div class="top-bar">
     <div class="search">
@@ -65,25 +63,61 @@
       <a href="#">登录/注册</a>
     </div>
   </div>
-
   <!-- banner -->
-  <ul class="banner">
-    <li class="item">
-      <a href="#">
-        <img alt="" src="./assets/banner1.png">
-      </a>
-    </li>
-    <li class="item">
-      <a href="#">
-        <img alt="" src="./assets/banner1.png">
-      </a>
-    </li>
-    <li class="item">
-      <a href="#">
-        <img alt="" src="./assets/banner1.png">
-      </a>
-    </li>
-  </ul>
+  <div class="banner">
+    <div class="container">
+      <ul class="banner-list">
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/banner1.png">
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/banner1.png">
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/banner1.png">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <!-- nav -->
+  <div class="nav">
+    <div class="container">
+      <ul class="nav-list">
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/nav1.png">
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/nav2.png">
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/nav3.png">
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/nav4.png">
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/nav5.png">
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  
 
 </body>
 </html>
