--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -117,7 +117,96 @@
       </ul>
     </div>
   </div>
-  
+  <!-- subsidy 补贴 -->
+  <div class="subsidy">
+    <div class="container">
+      <div class="subsidy-header">
+        <div class="subsidy-header-left">
+          <h2>
+            <a href="#">
+              <img alt="" src="./assets/subsidy-title.png">
+            </a>
+          </h2>
+          <div class="countdown">
+            <span class="time">15</span>
+            <span>:</span>
+            <span class="time">00</span>
+            <span>:</span>
+            <span class="time">04</span>
+          </div>
+        </div>
+        <div class="subsidy-header-right">
+          <a href="#">大牌底价补贴</a>
+        </div>
+      </div>
+      <ul class="subsidy-content">
+        <li class="item">
+          <a href="#">
+            <img alt="" class="pic" src="./assets/product.png">
+            <div class="price">
+              <div class="now-price">
+                <span>硬核价</span>
+                <span>￥</span>
+                <span class="price-num">299</span>
+              </div>
+              <div class="original-price">
+                <span>￥</span>
+                <span>359</span>
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" class="pic" src="./assets/product.png">
+            <div class="price">
+              <div class="now-price">
+                <span>硬核价</span>
+                <span>￥</span>
+                <span class="price-num">299</span>
+              </div>
+              <div class="original-price">
+                <span>￥</span>
+                <span>359</span>
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" class="pic" src="./assets/product.png">
+            <div class="price">
+              <div class="now-price">
+                <span>硬核价</span>
+                <span>￥</span>
+                <span class="price-num">299</span>
+              </div>
+              <div class="original-price">
+                <span>￥</span>
+                <span>359</span>
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" class="pic" src="./assets/product.png">
+            <div class="price">
+              <div class="now-price">
+                <span>硬核价</span>
+                <span>￥</span>
+                <span class="price-num">299</span>
+              </div>
+              <div class="original-price">
+                <span>￥</span>
+                <span>359</span>
+              </div>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
 
 </body>
 </html>
