--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -142,7 +142,7 @@
       <ul class="subsidy-content">
         <li class="item">
           <a href="#">
-            <img alt="" class="pic" src="./assets/product.png">
+            <img alt="" class="pic" src="assets/subsidy1.png">
             <div class="price">
               <div class="now-price">
                 <span>硬核价</span>
@@ -158,48 +158,48 @@
         </li>
         <li class="item">
           <a href="#">
-            <img alt="" class="pic" src="./assets/product.png">
+            <img alt="" class="pic" src="assets/subsidy2.png">
             <div class="price">
               <div class="now-price">
                 <span>硬核价</span>
                 <span>￥</span>
-                <span class="price-num">299</span>
+                <span class="price-num">195</span>
               </div>
               <div class="original-price">
                 <span>￥</span>
-                <span>359</span>
+                <span>800</span>
               </div>
             </div>
           </a>
         </li>
         <li class="item">
           <a href="#">
-            <img alt="" class="pic" src="./assets/product.png">
+            <img alt="" class="pic" src="assets/subsidy3.png">
             <div class="price">
               <div class="now-price">
                 <span>硬核价</span>
                 <span>￥</span>
-                <span class="price-num">299</span>
+                <span class="price-num">89</span>
               </div>
               <div class="original-price">
                 <span>￥</span>
-                <span>359</span>
+                <span>238</span>
               </div>
             </div>
           </a>
         </li>
         <li class="item">
           <a href="#">
-            <img alt="" class="pic" src="./assets/product.png">
+            <img alt="" class="pic" src="assets/subsidy4.png">
             <div class="price">
               <div class="now-price">
                 <span>硬核价</span>
                 <span>￥</span>
-                <span class="price-num">299</span>
+                <span class="price-num">429</span>
               </div>
               <div class="original-price">
                 <span>￥</span>
-                <span>359</span>
+                <span>870</span>
               </div>
             </div>
           </a>
