--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -149,7 +149,7 @@
                 <span>￥</span>
                 <span class="price-num">299</span>
               </div>
-              <div class="original-price">
+              <div class="old-price">
                 <span>￥</span>
                 <span>359</span>
               </div>
@@ -165,7 +165,7 @@
                 <span>￥</span>
                 <span class="price-num">195</span>
               </div>
-              <div class="original-price">
+              <div class="old-price">
                 <span>￥</span>
                 <span>800</span>
               </div>
@@ -181,7 +181,7 @@
                 <span>￥</span>
                 <span class="price-num">89</span>
               </div>
-              <div class="original-price">
+              <div class="old-price">
                 <span>￥</span>
                 <span>238</span>
               </div>
@@ -197,7 +197,7 @@
                 <span>￥</span>
                 <span class="price-num">429</span>
               </div>
-              <div class="original-price">
+              <div class="old-price">
                 <span>￥</span>
                 <span>870</span>
               </div>
