--- a/01-前端开发基础/案例练习/04_考拉海购/index.html
+++ b/01-前端开发基础/案例练习/04_考拉海购/index.html
@@ -207,6 +207,135 @@
       </ul>
     </div>
   </div>
+  <!-- 分类 -->
+  <div class="category">
+    <div class="container">
+      <ul class="header">
+        <li class="item active">
+          <a href="#">
+            <p class="title">精选</p>
+            <p class="desc">猜你喜欢</p>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <p class="title">美妆</p>
+            <p class="desc">魅力妆扮</p>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <p class="title">母婴</p>
+            <p class="desc">家有萌宝</p>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <p class="title">数码</p>
+            <p class="desc">酷玩科技</p>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <p class="title">保健</p>
+            <p class="desc">健康养生</p>
+          </a>
+        </li>
+      </ul>
+      <ul class="content">
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/product1.png">
+            <div class="brand">
+              <div class="name">雅诗兰黛</div>
+            </div>
+            <div class="property">
+              <p>【日本直购】【本土版40g】CPB/肌肤之钥 新款长管隔离40g 隔离霜妆前乳保湿遮瑕</p>
+            </div>
+            <div class="tags">
+              <span>下单立减280元</span>
+              <span>包税</span>
+            </div>
+            <div class="price">
+              优惠价￥<span>639</span>
+            </div>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/product1.png">
+            <div class="brand">
+              <div class="name">雅诗兰黛</div>
+            </div>
+            <div class="property">
+              <p>【日本直购】【本土版40g】CPB/肌肤之钥 新款长管隔离40g 隔离霜妆前乳保湿遮瑕</p>
+            </div>
+            <div class="tags">
+              <span>下单立减280元</span>
+              <span>包税</span>
+            </div>
+            <div class="price">
+              优惠价￥<span>639</span>
+            </div>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/product1.png">
+            <div class="brand">
+              <div class="name">雅诗兰黛</div>
+            </div>
+            <div class="property">
+              <p>【日本直购】【本土版40g】CPB/肌肤之钥 新款长管隔离40g 隔离霜妆前乳保湿遮瑕</p>
+            </div>
+            <div class="tags">
+              <span>下单立减280元</span>
+              <span>包税</span>
+            </div>
+            <div class="price">
+              优惠价￥<span>639</span>
+            </div>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/product1.png">
+            <div class="brand">
+              <div class="name">雅诗兰黛</div>
+            </div>
+            <div class="property">
+              <p>【日本直购】【本土版40g】CPB/肌肤之钥 新款长管隔离40g 隔离霜妆前乳保湿遮瑕</p>
+            </div>
+            <div class="tags">
+              <span>下单立减280元</span>
+              <span>包税</span>
+            </div>
+            <div class="price">
+              优惠价￥<span>639</span>
+            </div>
+          </a>
+        </li>
+        <li class="item">
+          <a href="#">
+            <img alt="" src="./assets/product1.png">
+            <div class="brand">
+              <div class="name">雅诗兰黛</div>
+            </div>
+            <div class="property">
+              <p>【日本直购】【本土版40g】CPB/肌肤之钥 新款长管隔离40g 隔离霜妆前乳保湿遮瑕</p>
+            </div>
+            <div class="tags">
+              <span>下单立减280元</span>
+              <span>包税</span>
+            </div>
+            <div class="price">
+              优惠价￥<span>639</span>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
 
 </body>
 </html>
