--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/02_JS变量的定义.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/02_JS变量的定义.html
@@ -12,6 +12,17 @@
     let name = "许大仙"
     // 输出变量
     console.log(name);
+
+    // 定义两个变量，并对其进行交换
+    let num1 = 10
+    let num2 = 20
+
+    let num3 = num1
+    num1 = num2
+    num2 = num3
+
+    console.log(num1);
+    console.log(num2);
   </script>
 
 </body>
