--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/02_JS变量的定义.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/02_JS变量的定义.html
@@ -17,9 +17,9 @@
     let num1 = 10
     let num2 = 20
 
-    let num3 = num1
+    let temp = num1
     num1 = num2
-    num2 = num3
+    num2 = temp
 
     console.log(num1);
     console.log(num2);
