--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/02_JS变量的定义.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/02_JS变量的定义.html
@@ -24,6 +24,10 @@
     console.log(num1);
     console.log(num2);
 
+    // 数组
+    let arr = []
+    console.log(typeof arr) // object
+
   </script>
 
 </body>
