--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/03_JS的String类型转换.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/03_JS的String类型转换.html
@@ -12,6 +12,11 @@
     let result = String(num)
     console.log(typeof result)
     console.log(result)
+    console.log(Boolean(0)) // false
+    console.log(Boolean(null)) // false
+    console.log(Boolean('')) // false
+    console.log(Boolean(undefined)) // false
+    console.log(Boolean(NaN)) // false
   </script>
 </body>
 </html>
