--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/05_JS变量的访问顺序.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/05_JS变量的访问顺序.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Document</title>
 </head>
 
 <body>
   <script>
     var message = "Hello World"
+
     function sayHello() {
       var message = "Hello xu"
 
@@ -17,9 +18,10 @@
         var message = "Hello wei"
         console.log('hi', message);
       }
+
       hi()
-    } 
-    
+    }
+
     sayHello()
   </script>
 </body>
